--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Zahra Farahmand",
   "license": "MIT",
   "dependencies": {
+    "app-module-path": "^2.2.0",
+    "auto-bind": "^1.2.0",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
