Add layouts and templates- Add login and register page

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^7.0.1",
     "mongoose": "^7.0.5",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "vazirmatn": "^33.0.3"
   }
 }
