--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^7.0.1",
     "mongoose": "^7.0.5",
     "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "unique-string": "^2.0.0",
     "vazirmatn": "^33.0.3"
