--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongoose": "^7.0.5",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
